# skills

./: LICENSE  README.md
skills/cpp-style-ref/: SKILL.md  reference.md
skills/cpp-style-ref/references-cmake-vcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
skills/cpp-style-ref/references-cmake-vcpkg/src/: error.cpp  error.hpp  main.cpp
skills/cpp-style-ref/references-cmake-vcpkg/src/a/: a1.cpp  a1.hpp  a2.cpp  a2.hpp
skills/cpp-style-ref/references-cmake-vcpkg/src/a/b/: b1.cpp  b1.hpp  b2.cpp  b2.hpp
skills/cpp-style-ref/references-xmake/: xmake.lua
skills/cpp-style-ref/references-xmake/src/: error.cpp  error.cppm  main.cpp
skills/cpp-style-ref/references-xmake/src/a/: a.cppm  a1.cppm  a2.cppm
skills/cpp-style-ref/references-xmake/src/a/b/: b.cppm  b1.cppm  b2.cppm
